--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:name=".MainDetailActivity"
             android:label="@string/app_name" >
         </activity>
-    <activity android:name=".SplashActivity" />
+        <activity android:name=".SplashActivity" />
+        <activity android:name=".Login_SignUp" />
 </application>
 
 </manifest>
